# learning-large-language-models

./: .gitignore  app.py  pyproject.toml
api/: fast_api.py
datasets/: supertype_knowledge.pkl
datasets/rick_data/: full_script.csv  full_script.db
datasets/rick_data/txt/: 101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  110.txt  111.txt  201.txt  202.txt  203.txt  204.txt  205.txt  206.txt  207.txt  208.txt  209.txt  210.txt  301.txt  303.txt  304.txt  305.txt  306.txt  307.txt  308.txt  309.txt  310.txt  401.txt
datasets/steps_data/: blog_urls.txt  steps_knowledge.pkl
implementation/: llama_index_chroma_db_class.py
learnings/: 01_simple_langchain.py  01b_openai_api_endpoints.py  02_vector_space_from_memory_langchain.py  03a_data_pre_process.py  03b_from_sql_db.py  05a_selenium_web_scrape.py  05b_llama_index_chroma_db.py  05c_llama_index_chroma_db_class.py  06_scrape_and_query.py  07_fully_offline.py  07_offline.py  README.md  __init__.py
pdf_api/: .gitattributes  api.py  frontend.html  main.py  pdf_api.py
pdf_api/utilis/: abstractions.py  data_utils.py
